src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>((IF( 
OR( 
ISBLANK(Phone), 
OR( 
CONTAINS(Phone, &apos;000-0000&apos;) , 
CONTAINS(Phone, &apos;111-1111&apos;) , 
CONTAINS(Phone, &apos;222-2222&apos;) , 
CONTAINS(Phone, &apos;333-3333&apos;) , 
CONTAINS(Phone, &apos;444-4444&apos;) , 
CONTAINS(Phone, &apos;555-5555&apos;) , 
CONTAINS(Phone, &apos;666-6666&apos;) , 
CONTAINS(Phone, &apos;777-7777&apos;) , 
CONTAINS(Phone, &apos;888-8888&apos;) , 
CONTAINS(Phone, &apos;123-4567&apos;) , 
CONTAINS(Phone, &apos;456-7890&apos;)
) 
), 0, 1 
) 
* (20))
+ 
(IF( ISBLANK( MailingStreet ), 0, 1) * (3.333))+ 
(IF( ISBLANK( MailingCity ), 0, 1)* (3.333)) + 
(IF( ISBLANK( MailingState ), 0, 1)*(5))+ 
(IF( ISBLANK( MailingCountry ), 0, 1)*(5))+ 
(IF( ISBLANK( MailingPostalCode ), 0, 1)*(3.333)) +
(IF( ISBLANK(FirstName ) ,0,1) *(10))+ 
(IF( ISBLANK( LastName ) , 0, 1) *(25))+ 
(IF( ISBLANK( Email ) , 0, 1) *(25))
)/20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>